--- a/DecalTatto/appDecal/package.json
+++ b/DecalTatto/appDecal/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
-    "expo": "~48.0.9",
+    "expo": "^48.0.17",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "react": "18.2.0",
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.11",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
